Fixed about image alignmnet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,6 +568,12 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+
+.about .row {
+  width: 108%;
+  display: flex;
+  justify-content: space-between;
+}
 .about .content h3 {
   font-weight: 600;
   font-size: 26px;
@@ -587,7 +593,7 @@ section {
 
 .about .content ul li {
   padding-bottom: 10px;
-  width: 110%;
+  /* width: 110%; */
 }
 
 .about .content ul i {
